fix: 🐛 Fix icon alignment

--- a/ui/admin/app/styles/app.scss
+++ b/ui/admin/app/styles/app.scss
@@ -425,6 +425,10 @@
     > div {
       display: flex;
       gap: sizing.rems(xs);
+      align-items: center;
+      p {
+        margin-bottom: sizing.rems(xxs);
+      }
     }
 
     > div:first-child {
